# image_processing

./: .gitignore  CMakeLists.txt  Makefile  MyProject  README.md  image_io.cpp  image_io.h  image_processing.cpp  image_processing.h  ne_main.cpp  parallel_processing_openmp.cpp  parallel_processing_openmp.h  performance_evaluation.h  testing.cpp
